--- a/pages/templates/products/create.html
+++ b/pages/templates/products/create.html
@@ -1,7 +1,5 @@
 {% extends 'pages/base.html' %}
-
-{% block title %}{{ title }}{% endblock %}
-
+{% block title %} {{title}} {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
@@ -10,35 +8,32 @@
                 <div class="card-header">Create product</div>
                 <div class="card-body">
                     {% if form.errors %}
-                    <div class="errors" class="alert alert-danger list-unstyled">
+                    <ul class="alert alert-danger list-unstyled" id="errors">
                         {% for field, errors in form.errors.items %}
-                            {% for error in errors %}
-                                <li>{{ error }}</li>
-                            {% endfor %}
+                        {% for error in errors %}
+                        <li>{{ error }}</li>
                         {% endfor %}
-                    </div>
+                        {% endfor %}
+                    </ul>
                     {% endif %}
-                    <form method="POST" action="{% url 'form' %}">
+                    <form action="{% url 'product-create' %}" method="POST">
                         {% csrf_token %}
-                        <input type="text" class="form-control mb-2" placeholder="Enter name" name="name" value="{{ form.data.name }}">
-                        <input type="text" class="form-control mb-2" placeholder="Enter price" name="price" value="{{ form.data.price }}">
-                        <input type="submit" class="btn btn-primary" value="Send" />
+                        <input class="form-control mb-2" name="name"
+                            placeholder="Enter name" type="text" value="{{form.data.name}}"/>
+                        <input class="form-control mb-2" name="price"
+                            placeholder="Enter price" type="text"
+                            value="{{form.data.price }}"
+                        />
+                        <input class="btn btn-primary" type="submit"
+                            value="Send"/>
                     </form>
-                    {% if messages %}
-                        <div class="alert">
-                            {% for message in messages %}
-                                <div class="{% if message.tags %}alert-{{ message.tags }}{% endif %}">
-                                    {{ message }}
-                                </div>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-
                 </div>
             </div>
         </div>
     </div>
 </div>
+</div>
 {% endblock %}
+
 
 
