--- a/pages/templates/products/show.html
+++ b/pages/templates/products/show.html
@@ -1,23 +1,27 @@
 {% extends 'pages/base.html' %}
-
-{% block title %}{{ title }}{% endblock %}
-{% block header_title %}{{ subtitle }}{% endblock %}
-
+{% block title %} {{title}} {% endblock %}
+{% block header_title %} {{subtitle}} {% endblock %}
 {% block content %}
 <div class="card mb-3">
     <div class="row g-0">
         <div class="col-md-4">
-            <img src="https://static.djangoproject.com/img/logos/django-logo-positive.svg" class="img-fluid rounded-start" alt="{{ product.name }}">
+            <img class="img-fluid
+rounded-start"
+                src="https://static.djangoproject.com/img/logos/django-logo-positive.svg">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                {% if product.price > 100 %}
-                    <h5 style="color: red;">{{ product.name }}</h5>
+                <h5 class="card-title">
+                    {{product.name}}
+                </h5>
+                {% if product.price > 2000 %}
+                <p class="card-text" style="color: red;">{{product.price}}</p>
                 {% else %}
-                    <h5 class="card-title">{{ product.name }}</h5>
+                <p class="card-text">{{product.price}}</p>
                 {% endif %}
-                <p class="card-text">{{ product.description }}</p>
-                <p class="card-text"><strong>Price:</strong> ${{ product.price }}</p>
+                {% for comment in product.comment_set.all %}
+                - {{ comment.description }}<br/>
+                {% endfor %}
             </div>
         </div>
     </div>
